examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/my-mismatch.stella
language core;

fn main(x : Bool) -> fn(Nat) -> Nat {
    return if x then succ(0) else 0
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
